# StockWatch

./: .env.example  .gitignore  README.md  config.yaml  conftest.py  discord_out.py  indicators.py  llm.py  main.py  pyproject.toml  requirements.txt  store.py
.github/workflows/: openrouter-review.yml
launchd/: com.user.stockbot.plist
ml/: .env.example  README.md  collect.py  config.yaml  label_job.py  requirements.txt  schema.sql  seed_test.py  train.py
ml/systemd/: stockml-collect.service  stockml-collect.timer  stockml-label.service  stockml-label.timer
sources/: finnhub_src.py  news_rss.py  reddit_scraper.py  yf_fallback.py
stockwatch/: __init__.py  cli.py  core.py  reddit.py  rss.py
tests/: test_reddit_scraper.py  test_signals.py
