[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stockwatch"
version = "0.1.0"
description = "Track stock prices and technical indicators from the command line"
requires-python = ">=3.10"
dependencies = [
    "yfinance>=0.2.0",
    "tomli>=2.0.1",
    "feedparser>=6.0.0",
]

[project.optional-dependencies]
reddit = [
    "praw>=7.2.0",
]
news = [
    "feedparser>=6.0.0",
]

[project.scripts]
stockwatch = "stockwatch.cli:main"

[tool.setuptools.packages.find]
include = ["stockwatch*"]